<?xml version="1.0"?>
<package format="2">
  <name>multigoal_solver</name>
  <version>0.0.0</version>
  <description>The multigoal_solver package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>graph_core</build_depend>
  <build_depend>ik_solver_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>graph_core</build_export_depend>
  <build_export_depend>ik_solver_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>graph_core</exec_depend>
  <exec_depend>ik_solver_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <export>
  </export>
</package>
